fix tripList grid and button label wrap for better responsiveness

--- a/src/components/Trips/TripList/TripList.scss
+++ b/src/components/Trips/TripList/TripList.scss
@@ -5,7 +5,7 @@
     margin: 0 auto;
 
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(40rem, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(35rem, 1fr));
     gap: 1rem;
     padding: 1rem;
   }
