--- a/src/components/shared/Button/Button.scss
+++ b/src/components/shared/Button/Button.scss
@@ -14,6 +14,7 @@
   align-items: center;
   justify-content: center;
   position: relative;
+  white-space: nowrap;
   overflow: hidden;
   
   &--loading {
